--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<solr.version>4.10.0</solr.version>
 		<thymeleaf.version>2.1.3.RELEASE</thymeleaf.version>
+		<thymeleaf-layout-dialect.version>1.2.5</thymeleaf-layout-dialect.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<guava.version>14.0</guava.version>
 		<junit.version>4.11</junit.version>
@@ -124,6 +125,11 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>${thymeleaf.version}</version>
 		</dependency>
+		<dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>${thymeleaf-layout-dialect.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
