--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,15 @@
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <solr.version>4.10.0</solr.version>
-      <thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
-      <thymeleaf-layout-dialect.version>1.2.5</thymeleaf-layout-dialect.version>
-      <slf4j.version>1.7.7</slf4j.version>
+
       <guava.version>14.0</guava.version>
-      <junit.version>4.11</junit.version>
+      <javassist.version>3.19.0-GA</javassist.version>
+      <junit.version>4.12</junit.version>
+      <mockito.version>1.10.19</mockito.version>
+      <slf4j.version>1.7.12</slf4j.version>
+      <solr.version>4.10.4</solr.version>
+      <thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
+      <thymeleaf-layout-dialect.version>1.2.8</thymeleaf-layout-dialect.version>
    </properties>
 
    <build>
@@ -61,7 +64,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
+            <version>3.2</version>
             <configuration>
                <source>1.7</source>
                <target>1.7</target>
@@ -70,7 +73,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
-            <version>2.4.2</version>
+            <version>2.5.1</version>
             <configuration>
                <tagNameFormat>v@{project.version}</tagNameFormat>
             </configuration>
@@ -78,7 +81,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.17</version>
+            <version>2.18.1</version>
             <configuration>
                <excludes>
                   <exclude>**/*IntegrationTest.java</exclude>
@@ -126,21 +129,16 @@
          <version>${thymeleaf.version}</version>
       </dependency>
       <dependency>
+         <!-- Thymeleaf need Javassist at runtime to do some (optional) magic... -->
+         <groupId>org.javassist</groupId>
+         <artifactId>javassist</artifactId>
+         <version>${javassist.version}</version>
+         <scope>runtime</scope>
+      </dependency>
+      <dependency>
          <groupId>nz.net.ultraq.thymeleaf</groupId>
          <artifactId>thymeleaf-layout-dialect</artifactId>
          <version>${thymeleaf-layout-dialect.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>${junit.version}</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.mockito</groupId>
-         <artifactId>mockito-all</artifactId>
-         <version>1.9.5</version>
-         <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.apache.solr</groupId>
@@ -153,6 +151,19 @@
          <artifactId>solr-core</artifactId>
          <version>${solr.version}</version>
          <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>${junit.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-all</artifactId>
+         <version>${mockito.version}</version>
+         <scope>test</scope>
       </dependency>
    </dependencies>
 
@@ -178,7 +189,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-source-plugin</artifactId>
-                  <version>2.3</version>
+                  <version>2.4</version>
                   <executions>
                      <execution>
                         <id>attach-sources</id>
@@ -191,7 +202,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-javadoc-plugin</artifactId>
-                  <version>2.9.1</version>
+                  <version>2.10.3</version>
                   <executions>
                      <execution>
                         <id>attach-javadocs</id>
@@ -204,7 +215,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-gpg-plugin</artifactId>
-                  <version>1.5</version>
+                  <version>1.6</version>
                   <executions>
                      <execution>
                         <id>sign-artifacts</id>
@@ -222,7 +233,7 @@
                <plugin>
                   <groupId>org.sonatype.plugins</groupId>
                   <artifactId>nexus-staging-maven-plugin</artifactId>
-                  <version>1.6.2</version>
+                  <version>1.6.5</version>
                   <extensions>true</extensions>
                   <configuration>
                      <serverId>ossrh</serverId>
