--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
    <groupId>com.s24.search.solr</groupId>
    <artifactId>solr-thymeleaf</artifactId>
    <name>solr-thymeleaf</name>
-   <version>0.9.13-SNAPSHOT</version>
+   <version>1.0.0-SNAPSHOT</version>
    <description>A Solr response writer using the Thymeleaf templating engine</description>
    <url>https://github.com/shopping24/solr-thymeleaf</url>
+
    <licenses>
       <license>
          <name>The Apache Software License, Version 2.0</name>
@@ -21,229 +22,144 @@
       <url>https://github.com/shopping24/solr-thymeleaf</url>
       <tag>HEAD</tag>
    </scm>
-   <issueManagement>
-      <system>Github Issues</system>
-      <url>${project.url}/issues</url>
-   </issueManagement>
-   <organization>
-      <name>Shopping24 GmbH</name>
-      <url>http://developer.s24.com</url>
-   </organization>
-   <developers>
-      <developer>
-         <id>tboeghk</id>
-         <name>Torsten Bøgh Köster</name>
-         <email>torsten.koester@s24.com</email>
-         <roles>
-            <role>owner</role>
-            <role>developer</role>
-         </roles>
-         <timezone>+1</timezone>
-      </developer>
-   </developers>
 
-   <prerequisites>
-      <maven>3.2</maven>
-   </prerequisites>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>${project.url}/issues</url>
+    </issueManagement>
 
-   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <organization>
+        <name>shopping24 GmbH</name>
+        <url>https://s24.com</url>
+    </organization>
 
-      <guava.version>14.0</guava.version>
-      <javassist.version>3.20.0-GA</javassist.version>
-      <junit.version>4.12</junit.version>
-      <mockito.version>1.10.19</mockito.version>
-      <slf4j.version>1.7.12</slf4j.version>
-      <solr.version>7.4.0</solr.version>
-      <thymeleaf.version>2.1.5.RELEASE</thymeleaf.version>
-      <thymeleaf-layout-dialect.version>1.2.9</thymeleaf-layout-dialect.version>
-   </properties>
+    <distributionManagement>
+        <repository>
+            <id>s24-internal</id>
+            <url>https://artifactory.s24.com/artifactory/s24-release-local</url>
+        </repository>
+    </distributionManagement>
 
-   <build>
-      <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.3</version>
-            <configuration>
-               <source>1.8</source>
-               <target>1.8</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-release-plugin</artifactId>
-            <version>2.5.2</version>
-            <configuration>
-               <tagNameFormat>v@{project.version}</tagNameFormat>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.18.1</version>
-            <configuration>
-               <excludes>
-                  <exclude>**/*IntegrationTest.java</exclude>
-               </excludes>
-               <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>3.1.0</version>
-            <configuration>
-               <descriptorRefs>
-                  <descriptorRef>jar-with-dependencies</descriptorRef>
-               </descriptorRefs>
-            </configuration>
-            <executions>
-               <execution>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>single</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-      </plugins>
+    <repositories>
+        <repository>
+            <id>spring-plugins</id>
+            <url>https://repo.spring.io/plugins-release/</url>
+        </repository>
+    </repositories>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <solr.version>7.4.0</solr.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.6.1</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
    </build>
 
    <dependencies>
-      <!-- The test framework has to be before lucene. -->
-      <dependency>
-         <groupId>org.apache.solr</groupId>
-         <artifactId>solr-test-framework</artifactId>
-         <version>${solr.version}</version>
-         <scope>test</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-api</artifactId>
-         <version>${slf4j.version}</version>
-         <scope>provided</scope>
-      </dependency>
       <dependency>
          <groupId>org.thymeleaf</groupId>
          <artifactId>thymeleaf</artifactId>
-         <version>${thymeleaf.version}</version>
+          <version>3.0.11.RELEASE</version>
       </dependency>
       <dependency>
-         <!-- Thymeleaf need Javassist at runtime to do some (optional) magic... -->
-         <groupId>org.javassist</groupId>
-         <artifactId>javassist</artifactId>
-         <version>${javassist.version}</version>
-         <scope>runtime</scope>
+          <groupId>nz.net.ultraq.thymeleaf</groupId>
+          <artifactId>thymeleaf-layout-dialect</artifactId>
+          <version>2.4.1</version>
       </dependency>
-      <dependency>
-         <groupId>nz.net.ultraq.thymeleaf</groupId>
-         <artifactId>thymeleaf-layout-dialect</artifactId>
-         <version>${thymeleaf-layout-dialect.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.solr</groupId>
-         <artifactId>solr-solrj</artifactId>
-         <version>${solr.version}</version>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.solr</groupId>
-         <artifactId>solr-core</artifactId>
-         <version>${solr.version}</version>
-         <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>${junit.version}</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.mockito</groupId>
-         <artifactId>mockito-all</artifactId>
-         <version>${mockito.version}</version>
-         <scope>test</scope>
-      </dependency>
+       <dependency>
+           <groupId>org.apache.solr</groupId>
+           <artifactId>solr-core</artifactId>
+           <version>${solr.version}</version>
+           <scope>provided</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.solr</groupId>
+           <artifactId>solr-test-framework</artifactId>
+           <version>${solr.version}</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.12</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-core</artifactId>
+           <version>3.2.0</version>
+           <scope>test</scope>
+       </dependency>
    </dependencies>
 
-   <distributionManagement>
-      <snapshotRepository>
-         <id>ossrh</id>
-         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      </snapshotRepository>
-      <repository>
-         <id>ossrh</id>
-         <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-      </repository>
-   </distributionManagement>
-
-   <profiles>
-      <profile>
-         <id>release</id>
-         <build>
-            <defaultGoal>
-               clean deploy
-            </defaultGoal>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-source-plugin</artifactId>
-                  <version>2.4</version>
-                  <executions>
-                     <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                           <goal>jar-no-fork</goal>
-                        </goals>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-javadoc-plugin</artifactId>
-                  <version>2.10.3</version>
-                  <executions>
-                     <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                           <goal>jar</goal>
-                        </goals>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-gpg-plugin</artifactId>
-                  <version>1.6</version>
-                  <executions>
-                     <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                           <goal>sign</goal>
-                        </goals>
-                        <configuration>
-                           <executable>gpg</executable>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <groupId>org.sonatype.plugins</groupId>
-                  <artifactId>nexus-staging-maven-plugin</artifactId>
-                  <version>1.6.5</version>
-                  <extensions>true</extensions>
-                  <configuration>
-                     <serverId>ossrh</serverId>
-                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
 </project>
