--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.s24.search.solr</groupId>
    <artifactId>solr-thymeleaf</artifactId>
    <name>solr-thymeleaf</name>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>1.0.0</version>
    <description>A Solr response writer using the Thymeleaf templating engine</description>
    <url>https://github.com/shopping24/solr-thymeleaf</url>
 
@@ -20,7 +19,7 @@
       <connection>scm:git:git@github.com:shopping24/solr-thymeleaf.git</connection>
       <developerConnection>scm:git:git@github.com:shopping24/solr-thymeleaf.git</developerConnection>
       <url>https://github.com/shopping24/solr-thymeleaf</url>
-      <tag>HEAD</tag>
+      <tag>solr-thymeleaf-1.0.0</tag>
    </scm>
 
     <issueManagement>
