--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,15 @@
                         <groupId>de.jutzig</groupId>
                         <artifactId>github-release-plugin</artifactId>
                         <version>1.1.1</version>
+                        <executions>
+                            <execution>
+                                <id>upload-artifacts-2-github</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>release</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                         <configuration>
                             <description>Release version ${project.version}</description>
                             <releaseName>${project.version}</releaseName>
