exclude transitive thymeleaf dependency

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
           <groupId>nz.net.ultraq.thymeleaf</groupId>
           <artifactId>thymeleaf-layout-dialect</artifactId>
           <version>2.5.1</version>
+          <exclusions>
+            <!-- exclude outdated thymeleaf -->
+            <exclusion>
+                <groupId>org.thymeleaf</groupId>
+                <artifactId>thymeleaf</artifactId>
+            </exclusion>
+        </exclusions> 
       </dependency>
        <dependency>
            <groupId>org.apache.solr</groupId>
