--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
    <groupId>cool.solr</groupId>
    <artifactId>solr-thymeleaf</artifactId>
    <name>solr-thymeleaf</name>
-   <version>1.3.2</version>
+   <version>1.3.3-SNAPSHOT</version>
    <description>A Solr response writer using the Thymeleaf templating engine</description>
    <url>https://github.com/solr-cool/solr-thymeleaf</url>
 
