--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,10 +31,7 @@ jobs:
     # in the local maven repo. we need them for later dependency
     # analysis
     - name: Build
-      run: mvn \
-            --batch-mode \
-            --no-transfer-progress \
-            install
+      run: mvn --batch-mode --no-transfer-progress install --file pom.xml
 
     - name: Dependecy Analysis
       run: mvn dependency:tree --file pom.xml -Dverbose
